[gd_scene load_steps=3 format=2]

[ext_resource path="res://layout/block/layout_block_inspector.gd" type="Script" id=1]
[ext_resource path="res://tools/editable_label.gd" type="Script" id=2]

[node name="LayoutBlockInspector" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource( 1 )

[node name="EditableLabel" type="VBoxContainer" parent="."]
offset_right = 160.0
script = ExtResource( 2 )

[node name="AddTrain" type="Button" parent="."]
offset_top = 4.0
offset_right = 160.0
offset_bottom = 24.0
text = "Add train"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddPriorSensorButton" type="Button" parent="."]
offset_top = 28.0
offset_right = 160.0
offset_bottom = 48.0
text = "Add prior sensor"

[node name="AddTrainDialog" type="ConfirmationDialog" parent="."]
offset_top = 42.0
offset_right = 200.0
offset_bottom = 112.0
window_title = "Add Train"

[node name="VBoxContainer" type="VBoxContainer" parent="AddTrainDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="AddTrainDialog/VBoxContainer"]
offset_right = 184.0
offset_bottom = 24.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="AddTrainDialog/VBoxContainer/GridContainer"]
offset_top = 5.0
offset_right = 42.0
offset_bottom = 19.0
text = "Name:"

[node name="train_idEdit" type="LineEdit" parent="AddTrainDialog/VBoxContainer/GridContainer"]
offset_left = 46.0
offset_right = 184.0
offset_bottom = 24.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanStopCheckBox" type="CheckBox" parent="."]
offset_top = 52.0
offset_right = 160.0
offset_bottom = 76.0
pressed = true
text = "Can stop"

[node name="CanFlipCheckBox" type="CheckBox" parent="."]
offset_top = 80.0
offset_right = 160.0
offset_bottom = 104.0
pressed = true
text = "Can reverse"

[node name="RandomTargetCheckBox" type="CheckBox" parent="."]
offset_top = 108.0
offset_right = 160.0
offset_bottom = 132.0
text = "Random target"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_top = 136.0
offset_right = 160.0
offset_bottom = 160.0

[node name="Label" type="Label" parent="HBoxContainer"]
offset_top = 5.0
offset_right = 82.0
offset_bottom = 19.0
text = "Wait time [s]"

[node name="WaitTimeEdit" type="SpinBox" parent="HBoxContainer"]
offset_left = 86.0
offset_right = 160.0
offset_bottom = 24.0
max_value = 100000.0

[connection signal="text_changed" from="EditableLabel" to="." method="_on_EditableLabel_text_changed"]
[connection signal="pressed" from="AddTrain" to="." method="_on_AddTrain_pressed"]
[connection signal="pressed" from="AddPriorSensorButton" to="." method="_on_AddPriorSensorButton_pressed"]
[connection signal="confirmed" from="AddTrainDialog" to="." method="_on_AddTrainDialog_confirmed"]
[connection signal="toggled" from="CanStopCheckBox" to="." method="_on_CanStopCheckBox_toggled"]
[connection signal="toggled" from="CanFlipCheckBox" to="." method="_on_CanFlipCheckBox_toggled"]
[connection signal="toggled" from="RandomTargetCheckBox" to="." method="_on_RandomTargetCheckBox_toggled"]
[connection signal="value_changed" from="HBoxContainer/WaitTimeEdit" to="." method="_on_WaitTimeEdit_value_changed"]
